src/app/app.component.css
@media (max-width: 767px) {
    /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
    .body-content {
        padding-top: 50px;
    }
}

#outlet {
    padding: 0;
    margin: 0 auto;
    width: 100%;
    position: absolute;
    margin-top: 70px;
}

#swipe-right-area {
    /* Uncomment and set opacity to 0.5 for debugging */
    /* background-color:green; */
    opacity: 0;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh; 
    width: 3vw;
    max-width: 12px;
    z-index: 1000;
}

.fill-space {
    flex: 1 1 auto;
}

@media (max-width: 767px) {
    .body-content {
        margin: 5px;
    }

    #outlet {
        margin-top: 50px;
    }
}

.no-margin {
    margin-top: 0;
}

:focus {
    outline: none;
}
::-moz-focus-inner {
    border: 0;
}

.example-container {
    display: flex;
    flex-direction: column;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.example-toolbar {
    z-index: 2;
    position: fixed;
}

h1.example-app-name {
    margin-left: 8px;
    text-decoration: none;
    cursor:pointer;
}

